# fximu

./: .gitignore  CALIBRATION.md  CMakeLists.txt  EKF.md  HOWTO.md  PARAMS.md  QUICK.md  README.md  package.xml
config/: fximu_params.yaml  fximu_params_000.yaml  fximu_params_001.yaml  fximu_params_002.yaml  fximu_params_003.yaml  fximu_params_004.yaml  fximu_params_006.yaml  fximu_params_007.yaml  fximu_params_008.yaml  fximu_params_009.yaml  fximu_params_00A.yaml  fximu_params_00B.yaml  fximu_params_00C.yaml  fximu_params_010.yaml
launch/: fx.launch  fx_rviz.launch  fx_viz.launch  fxcal.launch  fximu.launch  fxviz.launch
launch/rviz/: fximu.rviz
scripts/: cal_bridge.py  measure_gravity.py  measure_gravity.sh  measure_gravity_raw.sh  measure_magnetic.py  measure_thresholds.py  measure_thresholds.sh  perms.sh  socat.sh
